# PAT

./: .gitignore  CMakeLists.txt
docs/: PAT功能需求.md  design_log.md  environment.md  当前实现框架设计.md  计划需求.md
samples/: wave_format.json
scripts/: build_and_run.ps1  build_and_run.sh  setup_env.ps1
src/core/: DataSession.cpp  DataSession.h  FormatDefinition.cpp  FormatDefinition.h  FormatDocument.cpp  FormatDocument.h  RecordParser.cpp  RecordParser.h  format_definition.cpp  format_definition.h  record_parser.cpp  record_parser.h
src/ui/: .main_window.cpp.swp  ChartArea.cpp  ChartArea.h  DisplayGroupManager.cpp  DisplayGroupManager.h  FormatEditorDialog.cpp  FormatEditorDialog.h  MainWindow.cpp  MainWindow.h  SignalChartView.cpp  SignalChartView.h  SignalTreeController.cpp  SignalTreeController.h  SignalTreeWidget.cpp  SignalTreeWidget.h  main.cpp  main_window.cpp  main_window.h
